--- a/source/web/someco/components/dashlets/hello-world.css
+++ b/source/web/someco/components/dashlets/hello-world.css
@@ -4,3 +4,6 @@
    Add your style definitions here. CSS class names should be 
    prefixed with the name of the dashlet,e.g. .hello-world-xxx
 */
+span.expert-greeting {
+	font-weight: 700;
+}
